
	* automake.in (initialize_per_input): Init de_ansi_objects.
	(handle_single_transform_list): Error if extension unrecognized.
	Set elements of de_ansi_objects.
	(get_object_extension): Don't push ANSI2KNR onto @all.
	(handle_yacc_lex_cxx): Put ANSI2KNR into dependency of all ._o
	files.
	(pretty_print_internal): Initialize $bol depending on the column.

Fri Nov 15 16:22:15 1996  Gordon Matzigkeit  <gord@gnu.ai.mit.edu>

	* library.am: Fixed references to LIBRARY according to new scheme.

	* libs.am, libs-clean.am: Removed references to LIBFILES.

	* automake.texi (A Library): doc fix

	* automake.in (handle_libraries): Deleted references to *LIBFILES,
	since we now have the full library name in the *LIBRARIES
	variable.
	(am_install_var): Removed `-no-all' option, which was only required
	for the LIBFILES hack.

Fri Nov 15 16:39:29 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in: Applied libtool-related patches from Gord.
	(scan_configure): Set CC configure var if AM_PROG_LIBTOOL seen.
	Also indicate that AC_CANONICAL_HOST was run.

	* Makefile.am (pkgdata_DATA): Removed aclocal.m4.

Thu Nov 14 23:11:09 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_yacc_lex_cxx): Don't auto-define YACC, LEX,
	CXX, CC.

	* dejagnu.am: Print warning if runtest missing.

	From Joerg-Martin Schwarz:
	* automake.in (handle_aclocal_m4): Find aclocal.m4 in srcdir.
	(require_file_internal): Unlink file before creating it.

	* depend2.am (.deps/%.P): Don't print commands when running.

Mon Nov 11 10:35:08 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_single_transform_list): Simplified C++
	matching expression.

Fri Nov  8 09:49:09 1996  Tom Tromey  <tromey@cygnus.com>

	* Released 1.1g.

	* compile-kr.am ($(OBJECTS)): Removed.

	* automake.in (get_object_extension): Define ANSI2KNR.  Push onto
	@all if ansi2knr is in this directory.

	* configure.in: Don't run AC_ARG_PROGRAM, AC_PROG_MAKE_SET.

	* m4/init.m4: Run AM_SANITY_CHECK.
