@@ -655,11 +655,10 @@ This is required if any libraries are built in the package.
 This is required if any C++ source is included.
 @cvindex AC_PROG_CXX
 
-@c @item AM_PROG_LIBTOOL
-@c Automake will turn on processing for @code{libtool} (@pxref{Top, , The
-@c Libtool Manual, libtool.info, The Libtool Manual}).  This work is
-@c still preliminary.
-@c @cvindex AM_PROG_LIBTOOL
+@item AM_PROG_LIBTOOL
+Automake will turn on processing for @code{libtool} (@pxref{Top, , The
+Libtool Manual, libtool.info, The Libtool Manual}).
+@cvindex AM_PROG_LIBTOOL
 
 @item AC_PROG_YACC
 If a Yacc source file is seen, then you must either use this macro or
@@ -934,16 +933,20 @@ mt_SOURCES = @dots{}
 rmt_SOURCES = @dots{}
 @end example
 
+@samp{prog_LDADD} is inappropriate for passing program-specific linker
+flags (except for @samp{-l} and @samp{-L}).  So, use the
+@samp{prog_LDFLAGS} variable for this purpose.
+@vindex _LDFLAGS
+
 It is also occasionally useful to have a program depend on some other
 target which is not actually part of that program.  This can be done
 using the @samp{prog_DEPENDENCIES} variable.  Each program depends on
 the contents of such a variable, but no further interpretation is done.
 
 If @samp{prog_DEPENDENCIES} is not supplied, it is computed by Automake.
-The automatically-assigned value is the contents of @samp{prog_LDADD}
-with all the @samp{-l} and @samp{-L} options removed.  Be warned that
-@file{configure} substitutions are preserved; this can lead to bad
-dependencies if you are not careful.
+The automatically-assigned value is the contents of @samp{prog_LDADD}.
+Be warned that @file{configure} substitutions are preserved; this can
+lead to bad dependencies if you are not careful.
 
 
 @node A Library
@@ -977,6 +980,14 @@ variable.  This should be used for objects determined by
 libcpio_a_LIBADD = @@LIBOBJS@@ @@ALLOCA@@
 @end example
 
+@unnumberedsubsec Building Libraries with @code{libtool}
+
+The innovation used by GNU Libtool (@pxref{Top, , The Libtool Manual,
+libtool.info, The Libtool Manual}) is that libraries are programs.
+
+So, if you have GNU Libtool and want to use it to build your libraries,
+you should use the @samp{lib_PROGRAMS} variable (@pxref{Using Automake,
+, Using Automake with Libtool, libtool.info, The Libtool Manual}).
 
 @node LIBOBJS
 @section Special handling for LIBOBJS and ALLOCA
@@ -1002,7 +1013,7 @@ own compilation in some special cases.
 Some variables are inherited from Autoconf; these are @code{CC},
 @code{CFLAGS}, @code{CPPFLAGS}, @code{DEFS}, @code{LDFLAGS}, and
 @code{LIBS}.
-
+@vindex LDFLAGS
 
 There are some additional variables which Automake itself defines:
 
