@@ -22,7 +22,10 @@ install-@DIR@PROGRAMS: $(@DIR@_PROGRAMS)
 ## a syntax error in sh.
 	list="$(@DIR@_PROGRAMS)"; for p in $$list; do \
 	  if test -f $$p; then \
-	    $(INSTALL_PROGRAM) $$p $(@DIR@dir)/`echo $$p|sed '$(transform)'`; \
+## It is harmless to unconditionally use $(LIBTOOL) here because it
+## will be null in non-libtoolized packages, and even if it is set to
+## a real libtool, its behaviour is identical to normal INSTALL_PROGRAM.
+	    $(LIBTOOL) $(INSTALL_PROGRAM) $$p $(@DIR@dir)/`echo $$p|sed '$(transform)'`; \
 	  else :; fi; \
 	done
 
