@@ -62,6 +62,12 @@ Fri Nov 15 18:58:04 1996  Tom Tromey  <tromey@cygnus.com>
 	files.
 	(pretty_print_internal): Initialize $bol depending on the column.
 
+Mon Nov 18 19:11:53 1996  Gordon Matzigkeit  <gord@gnu.ai.mit.edu>
+
+	* automake.in: Added a lot of libtool support.  New variable
+	prog_LDFLAGS to pass linker flags.  Use libtoolize to install
+	libtool support files.
+
 Fri Nov 15 16:22:15 1996  Gordon Matzigkeit  <gord@gnu.ai.mit.edu>
 
 	* library.am: Fixed references to LIBRARY according to new scheme.
